skeplib/tests/fixtures/sema/invalid/vec_without_import.sk
fn main() -> Int {
  let xs: Vec[Int] = vec.new();
  return 0;
}
